--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,17 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap');
+
+
+body {
+  background-color: black;
+  color: white;
+}
+ 
 .main-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    font-family: 'Bruno Ace SC', cursive;
 }
 
 .show-container {
